# alcatraz_task

./: CMakeLists.txt  Data.h  Data.hpp  README.md  TestingData.cpp  TestingData.h  main.cpp
version_1/: CMakeLists.txt  Data.h  Data.hpp  docTest.h  main.cpp
